--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "hubot-scripts": ">= 2.4.2",
     "url": "",
     "querystring": "",
-    "gitio": "1.0.1"
+    "gitio": "1.0.1",
+    "express": ">= 3.0.0"
   },
 
   "engines": {
